Javadoc for new examples